# bimo

./: .clang-format  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  conanfile.txt
config/cmake/: cpp-requirements.cmake
cpp/lib/: CMakeLists.txt
cpp/lib/include/bisect/bimo/: types.h
cpp/lib/include/bisect/bimo/idioms/: enforce.h  overload.h  utils.h
cpp/lib/include/bisect/bimo/memory/: buffer_recycler.h  malloc_sbuffer.h  malloc_sbuffer_factory.h  mapped_oview.h  mapped_view.h  memory.h  oview.h  sbuffer_factory.h  shared_buffer.h  static_sbuffer.h  telemetry.h
cpp/lib/include/bisect/bimo/mq/: common.h  receiver.h  sender.h
cpp/lib/src/memory/: buffer_recycler.cpp  malloc_sbuffer.cpp  malloc_sbuffer_factory.cpp  mapped_oview.cpp  mapped_view.cpp  memory.cpp  oview.cpp  sbuffer_factory.cpp  shared_buffer.cpp  shared_sbuffer.cpp  static_buffer.cpp  static_sbuffer.cpp  telemetry.cpp
cpp/lib/src/mq/: receiver.cpp  sender.cpp
cpp/unit_tests/: CMakeLists.txt  block.cpp  counting_sbuffer_factory.cpp  counting_sbuffer_factory.h  main.cpp  malloc_block.cpp  owning_view.cpp  pch.h  sbuffer_mock.cpp  sbuffer_mock.h  sbuffer_ptr.cpp  slice.cpp
